force-app/main/default/objects/Week_Question_Item__c/Week_Question_Item__c.object-meta.xml
<CustomObject>
    <label>周调研问题明细</label>
    <nameField>
        <displayFormat>WQI-{YYYY}{MM}{DD}{000000}</displayFormat>
        <label>问题明细编码</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>周调研问题明细</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>