force-app/main/default/objects/Week_Question_Item__c/fields/External_Key_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Key_ID__c</fullName>
    <formula>Shop_Research__r.Id  +  TEXT(Number__c)</formula>
    <label>问题明细Key</label>
    <type>Text</type>
</CustomField>