force-app/main/default/objects/Week_Question_Item__c/fields/Is_Export__c.field-meta.xml
<CustomField>
    <fullName>Is_Export__c</fullName>
    <externalId>true</externalId>
    <label>Is Export</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>