force-app/main/default/objects/Week_Question_Item__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>问题</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>