force-app/main/default/objects/Week_Question_Item__c/fields/Shop_Research__c.field-meta.xml
<CustomField>
    <fullName>Shop_Research__c</fullName>
    <label>门店调查要求</label>
    <referenceTo>Week_Research__c</referenceTo>
    <relationshipLabel>周调研问题明细</relationshipLabel>
    <relationshipName>Week_Question_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>