force-app/main/default/objects/Week_Question_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>(&quot;有效&quot;)</defaultValue>
    <label>状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有效</fullName>
                <default>true</default>
                <label>有效</label>
            </value>
            <value>
                <fullName>无效</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>